# tm-eventsetup

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: build_boost.sh  build_utm.sh  build_xerces_c.sh
.github/workflows/: build_wheels_macos.yml  wheel.yml
tmEventSetup/: __init__.py  tmEventSetup.i
