[metadata]
name = tm-eventsetup
description = Python bindings for tmEventSetup.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
url = https://github.com/cms-l1-globaltrigger/tm-eventsetup
license = GPLv3
